# cube-bench

./: .gitignore  Makefile  README.md  pyproject.toml
src/cube_bench/: cli.py  io.py  orchestrator.py
src/cube_bench/configs/: config.yaml
src/cube_bench/configs/paths/: default.yaml
src/cube_bench/configs/test/: all.yaml  invariance_sweep.yaml  learning_curve.yaml  move_effect.yaml  prediction.yaml  reconstruction.yaml  reflection.yaml  step_by_step.yaml  verification.yaml
src/cube_bench/core/: base.py
src/cube_bench/prompts/: prompt_factory.py  prompts.yaml  reflection.yaml
src/cube_bench/runtime/: model_assistant.py
src/cube_bench/sim/: cube_simulator.py
src/cube_bench/tests/: invariance_sweep.py  learning_curve.py  move_effect.py  reconstruction.py  reflection.py  solve_moves.py  step_by_step.py  verification.py
