# =====================
# file: pyproject.toml
# =====================

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cube-bench"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "matplotlib",
  "tqdm",
  "pycuber",
  "kociemba",
  "pyyaml",
]
readme = "README.md"

[project.scripts]
cube-bench = "cube_bench.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["cube_bench*"]
exclude = ["tests*", "docs*"]